[fix] frontend 未完了と完了を分けて表示する
